# 714220035_IrgiFauzi

Penguasaan bahasa pemrog rust/2/: 10_slice.rs  1_ownership.rs  2_reference.rs  3_borrowing.rs  5_clone.rs  6_copy.rs  8_mutable.rs  9_dangling.rs
Penguasaan bahasa pemrog rust/3/: 10_genericstru.rs  1_strucksederhana.rs  2_struckfuncpengisi.rs  3_struckdgmethod.rs  4_struckmutable.rs  5_strucktupple  6_struckunit.rs  7_struckfreturn.rs  8_funcmodif  9_struckmethodstatic.rs
Penguasaan bahasa pemrog rust/4/: helper.rs  main.rs
Penguasaan bahasa pemrog rust/5/hello_project/: Cargo.toml
Penguasaan bahasa pemrog rust/6/: kegunaancreates.txt
Penguasaan bahasa pemrog rust/7/: perbedaan_rust.txt
